# netsome

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  ruff.toml
docs/: api.md  constants.md  examples.md
netsome/: constants.py
netsome/_converters/: bgp.py  ipv4.py  ipv6.py
netsome/converters/: ipv4.py
netsome/pools/: bgp.py  ipv4.py  number.py  vlans.py
netsome/rm/: pools.py
netsome/types/: __init__.py  bgp.py  interfaces.py  ipv4.py  ipv6.py  mac.py  ports.py  vlans.py
netsome/validators/: bgp.py  ipv4.py  ipv6.py  mac.py  vlans.py
tests/: test_constants.py
tests/converters/: test_ipv6.py
tests/convertes/: test_bgp.py  test_ipv4.py  test_ipv6.py
tests/convertes/bgp/: test_asdot_to_asplain.py  test_asdotplus_to_asplain.py
tests/types/: conftest.py  test_bgp.py  test_bgp_asn.py  test_bgp_community.py  test_interfaces.py  test_ipv4_address.py  test_ipv4_interface.py  test_ipv4_network.py  test_ipv6_address.py  test_ipv6_interface.py  test_ipv6_network.py  test_mac.py  test_vlans.py  vlans.py
tests/types/ipv4/: test_ipv4_network.py
tests/validators/: test_bgp.py  test_ipv4.py  test_ipv6.py  test_mac.py  test_vlans.py
