[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poe.env]
DIRS = "netsome tests"

[tool.poe.tasks.lint]
default_item_type = "cmd"
sequence = [
  "poetry run ruff check --no-fix $DIRS",
  "poetry run toml-sort --check pyproject.toml"
]

[tool.poe.tasks.pretty]
default_item_type = "cmd"
sequence = [
  "poetry run ruff check --fix $DIRS",
  "poetry run ruff format $DIRS",
  "poetry run toml-sort --in-place --all pyproject.toml"
]

[tool.poe.tasks.tests]
cmd = "poetry run pytest -vvv --cov=netsome --cov-report html"

[tool.poetry]
authors = ["kuderr <dakudryavcev@gmail.com>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking"
]
description = "The one and only library to make your network code handsome"
keywords = ["library", "network"]
license = "X11 License Distribution Modification Variant"
name = "netsome"
readme = "README.md"
repository = "https://github.com/kuderr/netsome"
version = "0.3.22"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"
pytest = "7"
pytest-cov = "^5.0.0"
pytest-lazy-fixture = "^0.6.3"
ruff = "^0.3.5"
toml-sort = "^0.23.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kuderr/netsome/issues"
"Homepage" = "https://github.com/kuderr/netsome"

[tool.pytest.ini_options]
addopts = "-ra --log-level=DEBUG --showlocals --verbose"
